# ushift

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
examples/: reqwest-json.rs
src/: app.rs  lib.rs  spider.rs
src/web/: mod.rs  reqwest.rs
ushift/: Cargo.toml
ushift-chrome/: Cargo.toml
ushift-jpath/: Cargo.toml
ushift-spider/: Cargo.toml
ushift-transformer/: Cargo.toml
ushift-website/: CNAME  index.html
ushift-xpath/: Cargo.toml
website/: CNAME  index.html
